--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -153,7 +153,7 @@ body{
    }
 }
 
-#bg{
+.bg{
     background: url('../img/banner/banner_2.png') center center/cover no-repeat;
     object-fit: contain;
     .container{
