--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,6 +71,11 @@
                 font-family: Fira_Medium;
                 color: #073a59;
             }
+            .post{
+                font-size: 18px;
+                line-height: 22px;
+                color: #073a59;
+            }
         }
     }
 }
