--- a/assets/scss/_bnnr.scss
+++ b/assets/scss/_bnnr.scss
@@ -2,15 +2,16 @@
     background: rgb(29,75,103);
     background: linear-gradient(0deg, rgba(29,75,103,1) 29%, rgba(6,39,60,1) 91%);
     position: relative;
+   
    .container{
 
     .slide_banner{
-        // padding: 120px 0px;
-        height: 80vh;
+        padding: 160px 0px;
         display: flex;
         align-items: center;
-        @media(max-width:1024px) {
-            // padding: 112px 0px;
+
+        @media(max-width:1200px) {
+            padding: 90px 0px;
         }
         @media(max-width:767px) {
             // padding: 60px 0px;
@@ -35,10 +36,15 @@
                     line-height: 46px;
                     margin-bottom: 16px;
                 }
-                @media(max-width:576px){
-                    font-size: 36px;
-                    line-height: 40px;
+                @media (max-width:991px) {
+                    font-size: 32px;
+                    line-height: 42px;
+                    margin-bottom: 16px;
                 }
+                // @media(max-width:576px){
+                //     font-size: 36px;
+                //     line-height: 40px;
+                // }
             }
             .head_txt{
                 font-size: 22px;
@@ -56,6 +62,7 @@
             .btns{
                 margin-top: 30px;
                 margin-bottom: 20px;
+                margin-left: -25px;
                 li{
                     margin: 0px 16px;
                     &:first-child{
@@ -73,6 +80,9 @@
                 }
             }
            }
+        }
+        .slick-dots{
+            // display: none;
         }
     }
    }
