--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -41,20 +41,50 @@ button,
     }
    
 }
+.d_center{
+    display: flex;
+    justify-content: center;
+}
 .slick-slide{
     outline: none;
+}
+.d_center{
+    display: flex;
+    justify-content: center;
 }
 body{
     box-sizing: border-box;
     font-family: Fira_Regular;
     text-transform: capitalize;
 }
+
 .container{
-    max-width: 1440px;   
-    @media (max-width:1199px) {
-        width: 95%;
+    // max-width: 1440px;   
+    @media (min-width:1400px) {
+        max-width: 1440px;   
     }
 }
+// .container{
+//     max-width: 1440px;   
+//     @media (max-width:1200px) {
+//         width: 95%;
+//     }
+// }
+// Navbar toggler
+
+.navbar-toggler{
+    background-color: #073a59c7;
+    color: #fff;
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+    padding: 6px 12px;
+    i{
+        font-size: 24px;
+        color: #ddd;
+    }
+}
+
+
+
 // Slick dots
 .slick-dots{
    position: absolute;
@@ -80,6 +110,22 @@ body{
 }
 
 
+#counter{
+    &.bg{
+       @media(max-width: 991px) {
+        background: none;
+        // background-color: #d2b22e !important;
+        background-color: #073a59 !important;
+       }
+    }
+
+    .counter-box{
+        box-shadow: 0px 10px 10px 8px rgba(0, 0, 0, 0.219);
+    }
+
+    }
+
+
 // dropdown toggle
 .dropdown-toggle::after {
     border: 0;
@@ -91,7 +137,7 @@ body{
 
 // Button
 .misBtn{
-    // max-width: 145px;
+   
     padding: 8px 16px;
     border-radius: 30px;
     background-color:#ecdf32 ;
@@ -110,7 +156,8 @@ body{
     }
     &:hover{
         transform: translateY(5px);
-    transform: all 0.4s linear;
+        transform: all 0.4s linear;
+    c   olor: #fff;
 
     }
 
@@ -133,6 +180,15 @@ body{
            text-transform: capitalize;
            font-family: Fira_Bold;
            color: #073a59;
+           @media(max-width: 480px) {
+               font-size: 36px;
+               line-height: 40px;
+           }
+       }
+       img{
+          @media(max-width: 480px) {
+            width: 250px;
+          }
        }
        .sub_title{
            font-size: 30px;
@@ -173,3 +229,24 @@ body{
     max-width: 920px;
     margin: auto;
 }
+/* =====top to bottom==== */
+.top-btm {
+    position: fixed;
+    width: 1.75em;
+    height: 1.75em;
+    line-height: 1.75em;
+    font-size: 1.75em;
+    bottom: 2em;
+    right: 2em;
+    z-index: 999;
+    color: #fff;
+    background: #ecdf32;
+    text-align: center;
+    cursor: pointer;
+    display: none;
+  }
+  
+  .top-btm:hover {
+    background: #181818;
+    transition: all 0.2s ease-in-out;
+  }
