--- a/assets/scss/_bnnr.scss
+++ b/assets/scss/_bnnr.scss
@@ -25,8 +25,8 @@
                     align-items: center;
                 }
             .bnnr_head{
-                font-size: 58px;
-                line-height: 62px;
+                font-size: 48px;
+                line-height: 58px;
                 color: #f2e933;
                 font-family: Fira_Bold;
                 text-transform: uppercase;
@@ -39,8 +39,14 @@
                 @media (max-width:991px) {
                     font-size: 32px;
                     line-height: 42px;
-                    margin-bottom: 16px;
                 }
+                @media (max-width:576px) {
+                    font-size: 26px;
+                    line-height: 42px;
+                    margin-bottom: 16px;
+                    text-align: center;
+                }
+
                 // @media(max-width:576px){
                 //     font-size: 36px;
                 //     line-height: 40px;
@@ -57,6 +63,7 @@
                 @media(max-width:576px){
                     font-size: 16px;
                     line-height: 20px;
+                    text-align: center;
                 }
             }
             .btns{
