--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,10 @@ a, a:hover, a:focus {
   text-decoration: none;
 }
 
+.pr_50 {
+  padding-right: 50px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
@@ -88,15 +92,6 @@ button, button:hover,
   outline: none;
 }
 
-.d_center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .slick-slide {
   outline: none;
 }
@@ -108,6 +103,17 @@ button, button:hover,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media (max-width: 1200px) {
+  .d_align_center {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 body {
@@ -254,7 +260,7 @@ body {
   padding: 52px 0px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -304,6 +310,14 @@ body {
   text-align: center;
   cursor: pointer;
   display: none;
+}
+
+@media (max-width: 480px) {
+  .top-btm {
+    font-size: 24px;
+    bottom: 3em;
+    right: 1em;
+  }
 }
 
 .top-btm:hover {
@@ -429,6 +443,7 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
   position: relative;
+  z-index: 9999999999;
 }
 
 #topBar .bar_content .cols.columnTwo .drop_user .user i {
@@ -451,18 +466,27 @@ body {
   }
 }
 
+header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: -10px;
+  z-index: 9999;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.253);
+          box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.253);
+}
+
 @media (max-width: 1199px) {
-  .navbar .container .navbar-collapse .navbar-nav {
+  header .navbar .container .navbar-collapse .navbar-nav {
     text-align: center;
   }
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item {
   position: relative;
-  margin: 0px 12px;
+  margin: 0px 8px;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item::after {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item::after {
   content: '';
   position: absolute;
   left: 0;
@@ -474,45 +498,45 @@ body {
   transition: all 0.2s linear;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item:last-child {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item:last-child {
   background-color: #073a59;
   border: none;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item:last-child .nav-link {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item:last-child .nav-link {
   color: #ddd;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item:last-child::after {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item:last-child::after {
   width: 0px;
   height: 0px;
 }
 
 @media (max-width: 1199px) {
-  .navbar .container .navbar-collapse .navbar-nav .nav-item.active {
+  header .navbar .container .navbar-collapse .navbar-nav .nav-item.active {
     background: #ddd;
   }
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item.active::after {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item.active::after {
   width: 100%;
 }
 
 @media (max-width: 1199px) {
-  .navbar .container .navbar-collapse .navbar-nav .nav-item:hover {
+  header .navbar .container .navbar-collapse .navbar-nav .nav-item:hover {
     background-color: #ddd;
   }
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item:hover::after {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item:hover::after {
   width: 100%;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item:hover:last-child {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item:hover:last-child {
   background-color: #073a59;
 }
 
-.navbar .container .navbar-collapse .navbar-nav .nav-item .nav-link {
+header .navbar .container .navbar-collapse .navbar-nav .nav-item .nav-link {
   font-size: 16px;
   line-height: 20px;
   color: #1b3872;
@@ -521,7 +545,7 @@ body {
 }
 
 @media (max-width: 1199px) {
-  .navbar .container .navbar-collapse .form-inline {
+  header .navbar .container .navbar-collapse .form-inline {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -534,21 +558,21 @@ body {
   }
 }
 
-.navbar .container .navbar-collapse .form-inline .form-control {
+header .navbar .container .navbar-collapse .form-inline .form-control {
   border: none;
   background-color: transparent;
   outline: none;
 }
 
 @media (max-width: 1199px) {
-  .navbar .container .navbar-collapse .form-inline .form-control {
+  header .navbar .container .navbar-collapse .form-inline .form-control {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
   }
 }
 
-.navbar .container .navbar-collapse .form-inline .btn:hover {
+header .navbar .container .navbar-collapse .form-inline .btn:hover {
   background-color: #073a59;
   color: #fff;
 }
@@ -593,8 +617,8 @@ body {
 }
 
 #banner .container .slide_banner div .bnnr_txt .bnnr_head {
-  font-size: 58px;
-  line-height: 62px;
+  font-size: 48px;
+  line-height: 58px;
   color: #f2e933;
   font-family: Fira_Bold;
   text-transform: uppercase;
@@ -613,7 +637,15 @@ body {
   #banner .container .slide_banner div .bnnr_txt .bnnr_head {
     font-size: 32px;
     line-height: 42px;
+  }
+}
+
+@media (max-width: 576px) {
+  #banner .container .slide_banner div .bnnr_txt .bnnr_head {
+    font-size: 26px;
+    line-height: 42px;
     margin-bottom: 16px;
+    text-align: center;
   }
 }
 
@@ -634,6 +666,7 @@ body {
   #banner .container .slide_banner div .bnnr_txt .head_txt {
     font-size: 16px;
     line-height: 20px;
+    text-align: center;
   }
 }
 
@@ -680,6 +713,13 @@ body {
 @media (max-width: 767px) {
   #about .container .abt-txt {
     margin: 18px 0px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  #about .container .abt-txt {
+    font-size: 16px;
+    text-align: left;
   }
 }
 
@@ -802,7 +842,13 @@ body {
 }
 
 #services .our_service.bg_size {
-  background-size: 750px;
+  background-size: 670px;
+}
+
+@media (max-width: 1350px) {
+  #services .our_service.bg_size {
+    background-size: 550px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -998,6 +1044,12 @@ body {
   left: 0%;
   -webkit-transform: translate(50%, -50%);
           transform: translate(50%, -50%);
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  #services .slick-dots {
+    left: -10%;
+  }
 }
 
 #services .slick-dots li {
@@ -1292,12 +1344,28 @@ body {
   line-height: 34px;
   font-family: Fira_Bold;
   padding-bottom: 10px;
+  color: #fff;
+}
+
+@media (max-width: 576px) {
+  #request .container .req_title {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
 
 #request .container .req_txt {
   font-size: 30px;
   line-height: 36px;
   padding-bottom: 15px;
+  color: #fff;
+}
+
+@media (max-width: 576px) {
+  #request .container .req_txt {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
 
 #request .container .misBtn {
@@ -1547,6 +1615,10 @@ footer .container .top {
   padding-bottom: 12px;
 }
 
+footer .container .top .col-6:nth-child(2) {
+  padding-left: 35px;
+}
+
 footer .container .top .brand_logo {
   margin: 30px 0px;
 }
@@ -1561,6 +1633,13 @@ footer .container .top .location_info .txt {
   color: #fff;
   text-transform: capitalize;
   margin: 8px 0px;
+}
+
+@media (max-width: 576px) {
+  footer .container .top .location_info .txt {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 footer .container .top .socialIcon {
@@ -1676,6 +1755,7 @@ footer .container .bottom .policy {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding-left: 0px !important;
 }
 
 @media (max-width: 767px) {
@@ -1687,7 +1767,7 @@ footer .container .bottom .policy {
 }
 
 footer .container .bottom .policy li {
-  margin: 0px 20px;
+  margin: 0px 12px;
 }
 
 @media (max-width: 480px) {
@@ -1703,6 +1783,13 @@ footer .container .bottom .policy li:first-child {
 footer .container .bottom .policy li a {
   color: #fff;
   font-size: 14px;
+}
+
+@media (max-width: 480px) {
+  footer .container .bottom .policy li a {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
 footer .container .bottom .policy li a:hover {
