--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -18,6 +18,12 @@ footer{
 
         .top{
             padding-bottom: 12px;
+
+            .col-6{
+                &:nth-child(2) {
+                   padding-left: 35px;
+                }
+            }
             .brand_logo{
                 margin: 30px 0px;
             }
@@ -29,6 +35,10 @@ footer{
                     color: #fff;
                     text-transform: capitalize;
                     margin: 8px 0px;
+                    @media(max-width: 576px) {
+                        font-size: 14px;
+                        line-height: 18px;
+                    }
                 }
             }
             .socialIcon{
@@ -105,11 +115,12 @@ footer{
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
+                padding-left: 0px !important;
                 @media (max-width: 767px) {
                     justify-content: center;
                 }
                 li{
-                    margin: 0px 20px;
+                    margin: 0px 12px;
                       @media(max-width: 480px) {
                             margin: 0px 6px;
                         }
@@ -119,7 +130,10 @@ footer{
                     a{
                         color: #fff;
                         font-size: 14px;
-                      
+                        @media(max-width: 480px) {
+                            font-size: 12px;
+                            line-height: 16px;
+                        }
                         &:hover{
                             text-decoration: underline;
                         }
