--- a/assets/scss/_topBar.scss
+++ b/assets/scss/_topBar.scss
@@ -64,6 +64,7 @@
                   margin-left: 10px;
                   justify-content: flex-end;
                   position: relative;
+                  z-index: 9999999999;
                   .user{
                       i{
                           font-size: 30px;
