--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,12 +21,13 @@
             font-size: 24px;
             line-height: 36px;
             text-align: justify;
-            @media(max-width:1200px) {
-
-            }
+          
             @media (max-width: 767px) {
               margin: 18px 0px !important;
-            //   text-align: left;
+            }
+            @media(max-width:576px) {
+                font-size: 16px;
+                text-align: left;
             }
         }
         .abt_img{
@@ -140,7 +141,10 @@
 
         }
         &.bg_size{
-            background-size: 750px;
+            background-size: 670px;
+            @media(max-width: 1350px) {
+                background-size: 550px;
+            }
             @media(max-width:1024px){
                 background-size: 450px;
             }
@@ -281,6 +285,9 @@
         top: 50%;
         left: 0%;
         transform: translate(50%,-50%);
+        @media(min-width: 320px) and (max-width: 480px) {
+            left: -10%
+        }
         li{
             margin: 10px 0px;
         }
@@ -469,11 +476,22 @@
             line-height: 34px;
             font-family: Fira_Bold;
             padding-bottom: 10px;
+            color: #fff;
+            @media(max-width: 576px) {
+                font-size: 18px;
+                line-height: 22px;
+            }
         }
         .req_txt{
             font-size: 30px;
             line-height: 36px;
             padding-bottom: 15px;
+            color: #fff;
+            @media(max-width: 576px) {
+                font-size: 18px;
+                line-height: 22px;
+            }
+
         }
         .misBtn{
             background: #fff;
